crates/zeph-memory/src/snapshots/zeph_memory__recall_view__tests__sa_head_view.snap
---
source: crates/zeph-memory/src/recall_view.rs
assertion_line: 220
expression: rf
---
RecalledFact {
    fact: GraphFact {
        entity_name: "",
        relation: "uses",
        target_name: "",
        fact: "Rust uses LLVM for compilation",
        entity_match_score: 0.82,
        hop_distance: 0,
        confidence: 0.9,
        valid_from: Some(
            "2026-01-01",
        ),
        edge_type: Semantic,
        retrieval_count: 0,
        edge_id: Some(
            55,
        ),
    },
    activation_score: Some(
        0.82,
    ),
    provenance_message_id: None,
    provenance_snippet: None,
    neighbors: [],
}
