crates/zeph-memory/src/snapshots/zeph_memory__recall_view__tests__zoom_out_view.snap
---
source: crates/zeph-memory/src/recall_view.rs
assertion_line: 314
expression: rf
---
RecalledFact {
    fact: GraphFact {
        entity_name: "Rust",
        relation: "uses",
        target_name: "LLVM",
        fact: "Rust uses LLVM for code generation",
        entity_match_score: 0.9,
        hop_distance: 0,
        confidence: 0.95,
        valid_from: Some(
            "2026-01-01",
        ),
        edge_type: Semantic,
        retrieval_count: 1,
        edge_id: Some(
            10,
        ),
    },
    activation_score: None,
    provenance_message_id: None,
    provenance_snippet: None,
    neighbors: [
        GraphFact {
            entity_name: "LLVM",
            relation: "supports",
            target_name: "WebAssembly",
            fact: "LLVM supports WebAssembly output",
            entity_match_score: 0.5,
            hop_distance: 1,
            confidence: 0.8,
            valid_from: None,
            edge_type: Semantic,
            retrieval_count: 0,
            edge_id: Some(
                11,
            ),
        },
    ],
}
